multi-tenant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${TENANT}
  labels:
    tenant: ${TENANT}
