multi-tenant/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ${TENANT}
spec:
  selector:
    matchLabels:
      app: redis
      tenant: ${TENANT}
  template:
    metadata:
      labels:
        app: redis
        tenant: ${TENANT}
    spec:
      containers:
      - name: redis
        image: ${REDIS_IMAGE}
        ports:
        - containerPort: 6379
