multi-tenant/networkpolicy.yaml
# deny all commuincation between tenants
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: ${TENANT}
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
#allow api gateway
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway
  namespace: ${TENANT}
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: control-plane
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-only-backend
  namespace: ${TENANT}
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
